# voxa

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  aa.html  debug_voxa.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.aind/: context.md  lessons.md  roadmap.md  tasks.md
.aind/specs/llama-engine/: design.md  requirements.md  tasks.md
.aind/specs/smart-formatting/: design.md  requirements.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: release.yml
.kiro/hooks/: check-agent-status.json
.kiro/specs/auto-profile-detection/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/llama-server-cold-start/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/pill-ui-overhaul/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/settings-ui-redesign/: design.md  requirements.md  tasks.md
docs/: code-signing.md  design.md  product-deff.md  shortcut-help.md  ui_spec.md  ui_spec_micro.md
docs/architecture/: shortcuts-native-tap.md  vad-animation.md
docs/brand/: brand_identity.md  branding.json
docs/marketing/: landing_page_prompt.md
public/: render_app_icon.html  render_tray.html
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.aind/: lessons.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: silero_vad_v6.onnx
src-tauri/src/: audio.rs  commands.rs  db.rs  event_tap.rs  formatting.rs  hallucination_phrases.txt  lib.rs  llama_inference.rs  main.rs  models.rs  pipeline.rs  shortcuts.rs  tray.rs  vad.rs  whisper_inference.rs  window_utils.rs
src/components/: ProfilePicker.tsx  ProfilePill.tsx  RecorderPill.tsx  SettingsPanel.tsx  TrayMenu.tsx
src/components/__tests__/: RecorderPill.test.tsx
src/hooks/: useAudioLevel.ts  useProfiles.ts  useRecordingDuration.ts  useSettings.ts  useTranscription.ts
src/hooks/__tests__/: useAudioLevel.test.ts  useRecordingDuration.test.ts
