[package]
name = "voxa"
version = "0.1.0"
description = "Privacy-first, cross-platform voice dictation"
authors = ["lufermalgo"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Voxa"
path = "src/main.rs"

[lib]
name = "voxa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico", "test", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio & Storage
cpal = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }

# AI Bindings
whisper-rs = { version = "0.13", features = ["metal"] }

# Utility
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tauri-plugin-clipboard-manager = "2"
encoding_rs = "0.8"
scopeguard = "1.2"
sys-locale = "0.3.2"

# Triggering rebuild for Metal features
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
block = "0.1"
core-graphics = "0.23"
core-foundation = "0.9"

